--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
+    "develop": "gatsby develop --port 10510",
+    "start": "gatsby develop --port 10510",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
   "dependencies": {
     "gatsby": "^3.8.1",
+    "gatsby-source-prismic": "^3.3.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
