--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "gatsby": "^3.8.1",
     "gatsby-source-prismic": "^3.3.6",
+    "nodemailer": "^6.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
