--- a/package.json
+++ b/package.json
@@ -15,10 +15,18 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.13.1",
     "gatsby": "^3.8.1",
+    "gatsby-plugin-gatsby-cloud": "^2.9.0",
+    "gatsby-plugin-image": "^1.9.0",
+    "gatsby-plugin-sharp": "^3.9.0",
+    "gatsby-plugin-styled-components": "^4.9.0",
+    "gatsby-source-filesystem": "^3.9.0",
     "gatsby-source-prismic": "^3.3.6",
+    "gatsby-transformer-sharp": "^3.9.0",
     "nodemailer": "^6.6.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.3.0"
   }
 }
